--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,23 @@ section.green{
     height: 400px;
 }
 
-.portfolio-card{
-    height: 300px;
-    background-color: blue;
-    border: 3px solid violet;
-}
-
 /* START SEPARATOR */
 div.up-score{
     width: 300px;
-    height: 3px;
+    height: 5px;
+}
+
+.up-score-white{
     background-color: white;
 }
 
+.up-score-grey{
+    background-color: #2C3E50;
+}
 
+.star-grey-icon{
+    color: #2C3E50;
+}
 /* ----------HEADER--------- */
 header{
     background-color: #2C3E50;
