--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,15 @@ section.green{
     height: 400px;
 }
 
+.green-txt{
+    color: #1ABC9C;
+}
+
+.green-btn{
+    background-color: #1ABC9C;
+    border: none;
+}
+
 /* START SEPARATOR */
 div.up-score{
     width: 300px;
@@ -51,6 +60,16 @@ footer{
 section#address{
     background-color: #3A546D;
 }
+
+div.social-icon i{
+    width: 40px;
+    height: 40px;
+    border: 2px solid white;
+    border-radius: 50%;
+    padding-top: .6rem;
+    margin: 0 .6rem;
+}
+
 
 section#copyright{
     background-color: #2C3E50;
